# learning-rust

./: .gitignore  README.md
2048/: Cargo.toml  progress.txt
2048/src/: main.rs
planetscale-csv-upload/: progress.txt
planetscale-csv-upload/crates/upload-pokemon-data/: Cargo.toml  create-tables.sql
planetscale-csv-upload/crates/upload-pokemon-data/src/: db.rs  main.rs  pokemon_csv.rs
