[package]
name = "upload-pokemon-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Inflector = "0.11.4"
color-eyre = "0.6.1"
csv = "1.1.6"
ksuid = "0.2.0"
serde = { version = "1.0.136", features = ["derive"] } 
sqlx = { version = "0.5.13", features = ["mysql", "runtime-tokio-rustls"]}
tokio = { version = "1.17.0", features = ["macros"] } 
